--- a/index.html
+++ b/index.html
@@ -1,14 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon">
-    <script src="https://unpkg.com/htmx.org@1.9.10" integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC" crossorigin="anonymous"></script>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/styles/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <title>Figma Land</title>
+    <link
+      rel="shortcut icon"
+      href="https://placekitten.com/96/139"
+      type="image/x-icon"
+    />
+    <script
+      src="https://unpkg.com/htmx.org@1.9.10"
+      integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <nav class="header__menu">
+          <ul>
+            <li class="header__menu-item">
+              <a href="#">Home</a>
+            </li>
+            <li class="header__menu-item">
+              <a href="#">Product</a>
+            </li>
+            <li class="header__menu-item">
+              <a href="#">Pricing</a>
+            </li>
+            <li class="header__menu-item">
+              <a href="#">About</a>
+            </li>
+            <li class="header__menu-item">
+              <a href="#">Contact</a>
+            </li>
+            <li> <a href="#" class="header__logo"><img src="img/nav-menu/logo.png" alt="logo" /></a></li>
+          </ul>
+         
+          <div class="header__links">
+            <a href="#" class="header__link"
+              ><img src="img/nav-menu/twitter.png" alt="twitter"
+            /></a>
+            <a href="#" class="header__link"
+              ><img src="img/nav-menu/facebook.png" alt="facebook"
+            /></a>
+            <a href="#" class="header__link"
+              ><img src="img/nav-menu/linkedin.png" alt="linkedin"
+            /></a>
+          </div>
+        </nav>
+        <section class="header__hero">
+          <h1>The best products start with Figma</h1>
+          <p>
+            Most calendars are designed for teams. Slate is designed for
+            freelancers
+          </p>
+          
+            <a href="#">Try For Free</a>
 
-</body>
+        </section>
+      </div>
+    </header>
+  </body>
 </html>
